added new configurations

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -5,6 +5,7 @@ Host: 127.0.0.1
 DBname: slashdb
 [Path]
 base_path: ../../../public/docs/
+
 [Config]
 debugMode: True
 [angular]
@@ -25,13 +26,31 @@ zip_url:
 sort: 2
 additional: false
 active: true
+[aspnet]
+name: ASP.NET
+parsed_name: asp.net
+default_uri: /asp.net/index
+scraper_name:
+zip_url:  
+sort: 3
+additional: false
+active: false
+[elixir]
+name: Elixir
+parsed_name: elixir
+default_uri: /elixir/index
+scraper_name: elixir
+zip_url:  
+sort: 4
+additional: false
+active: true
 [backbone]
 name: BackboneJS
 parsed_name: backbonejs
 default_uri: /backbonejs/backbone.$
 scraper_name: backbone
 zip_url:  
-sort: 3
+sort: 5
 additional: false
 active: true
 [bower]
@@ -40,7 +59,7 @@ parsed_name: bower
 default_uri: /bower/creating_packages
 scraper_name: bower
 zip_url:  
-sort: 4
+sort: 6
 additional: false
 active: true
 [bootstrap]
@@ -49,7 +68,7 @@ parsed_name: bootstrap
 default_uri: /bootstrap/getting_started
 scraper_name: bootstrap
 zip_url:  
-sort: 5
+sort: 7
 additional: false
 active: true
 [browserify]
@@ -58,7 +77,7 @@ parsed_name: browserify
 default_uri: /browserify/getting_started
 scraper_name: browserify
 zip_url:  
-sort: 6
+sort: 8
 additional: false
 active: true
 [c]
@@ -67,7 +86,7 @@ parsed_name: c
 default_uri: /c/c_keywords
 scraper_name: c
 zip_url: http://upload.cppreference.com/mwiki/images/6/6c/html_book_20141118.tar.gz 
-sort: 7
+sort: 9
 additional: false
 active: true
 [chai]
@@ -76,7 +95,7 @@ parsed_name: chai
 default_uri: /chai/api_reference
 scraper_name: chai
 zip_url:  
-sort: 8
+sort: 11
 additional: false
 active: true
 [chef]
@@ -85,7 +104,7 @@ parsed_name: chef
 default_uri: chef/all_about_chef_...
 scraper_name: chef
 zip_url:  
-sort: 9
+sort: 12
 additional: false
 active: true
 [clojure]
@@ -94,7 +113,7 @@ parsed_name: clojure
 default_uri: /clojure/clojure.core
 scraper_name: clojure
 zip_url:  
-sort: 11
+sort: 13
 additional: false
 active: true
 [coffeescript]
@@ -103,7 +122,7 @@ parsed_name: coffeescript
 default_uri: /coffeescript/index
 scraper_name: coffeescript
 zip_url:  
-sort: 12
+sort: 14
 additional: false
 active: true
 [cordova]
@@ -112,7 +131,7 @@ parsed_name: apache_cordova
 default_uri: /apache-cordova/overview
 scraper_name: cordova
 zip_url:  
-sort: 13
+sort: 15
 additional: false
 active: true
 [cpp]
@@ -121,7 +140,7 @@ parsed_name: cpp
 default_uri: /cpp/c++_language
 scraper_name: cpp
 zip_url:  
-sort: 14
+sort: 16
 additional: false
 active: true
 [css]
@@ -130,7 +149,7 @@ parsed_name: css
 default_uri: /css/universal_selectors
 scraper_name: css
 zip_url:  
-sort: 40
+sort: 0
 additional: false
 active: true
 [d3]
@@ -139,7 +158,7 @@ parsed_name: d3
 default_uri: /d3/namespaces
 scraper_name: d3
 zip_url:  
-sort: 15
+sort: 17
 additional: false
 active: true
 [django]
@@ -148,7 +167,7 @@ parsed_name: django
 default_uri: /django/getting_started
 scraper_name: django
 zip_url: https://docs.djangoproject.com/m/docs/django-docs-1.8-en.zip 
-sort: 16
+sort: 18
 additional: false
 active: true
 [dom]
@@ -160,13 +179,22 @@ zip_url:
 sort: 10
 additional: false
 active: true
+[dojo]
+name: Dojo
+parsed_name: dojo
+default_uri: /dojo/index
+scraper_name: dojo
+zip_url:  
+sort: 19
+additional: false
+active: true
 [dom_events]
 name: DOM Events
 parsed_name: dom_events
 default_uri: /dom_events/click
 scraper_name: dom_events
 zip_url:  
-sort: 0
+sort: 20
 additional: false
 active: true
 [drupal]
@@ -175,7 +203,7 @@ parsed_name: drupal
 default_uri: /drupal
 scraper_name: drupal
 zip_url:  
-sort: 17
+sort: 21
 additional: false
 active: true
 [ember]
@@ -184,7 +212,7 @@ parsed_name: emberjs
 default_uri: /ember/classes/namespace
 scraper_name: ember
 zip_url:  
-sort: 18
+sort: 22
 additional: false
 active: true
 [express]
@@ -193,7 +221,16 @@ parsed_name: express
 default_uri: /express/express
 scraper_name: express
 zip_url:  
-sort: 19
+sort: 23
+additional: false
+active: true
+[flow]
+name: Flow
+parsed_name: flow
+default_uri: /flow/index
+scraper_name: flow
+zip_url:  
+sort: 24
 additional: false
 active: true
 [git]
@@ -202,7 +239,7 @@ parsed_name: git
 default_uri: /git/git
 scraper_name: git
 zip_url:  
-sort: 21
+sort: 25
 additional: false
 active: true
 [go]
@@ -211,7 +248,7 @@ parsed_name: go
 default_uri: /go/go_programming_language/community
 scraper_name: go
 zip_url:  
-sort: 22
+sort: 26
 additional: false
 active: true
 [grunt]
@@ -220,7 +257,7 @@ parsed_name: grunt
 default_uri: /grunt/grunt
 scraper_name: grunt
 zip_url:  
-sort: 23
+sort: 27
 additional: false
 active: true
 [html]
@@ -238,7 +275,7 @@ parsed_name: http
 default_uri: /http/200_ok
 scraper_name: http
 zip_url:  
-sort: 24
+sort: 28
 additional: false
 active: true
 [haskell]
@@ -247,7 +284,7 @@ parsed_name: haskell
 default_uri: /haskell/index
 scraper_name: haskell
 zip_url:  
-sort: 25
+sort: 29
 additional: false
 active: true
 [iojs]
@@ -256,7 +293,7 @@ parsed_name: iojs
 default_uri: /iojs/index
 scraper_name: iojs
 zip_url:  
-sort: 26
+sort: 31
 additional: false
 active: true
 [jasmine]
@@ -265,7 +302,7 @@ parsed_name: jasmine
 default_uri: /jasmine/introduction
 scraper_name: jasmine
 zip_url:  
-sort: 27
+sort: 32
 additional: false
 active: true
 [javascript]
@@ -274,7 +311,7 @@ parsed_name: javascript
 default_uri: /javascript/statements_and_declarations
 scraper_name: javascript
 zip_url:  
-sort: 20
+sort: 40
 additional: false
 active: true
 [java7se]
@@ -283,7 +320,7 @@ parsed_name: java7se
 default_uri: /java7se/
 scraper_name: java7se
 zip_url:  
-sort: 28
+sort: 33
 additional: false
 active: true
 [jest]
@@ -292,7 +329,7 @@ parsed_name: jest
 default_uri: /jest/getting_started
 scraper_name: jest
 zip_url:  
-sort: 29
+sort: 34
 additional: false
 active: true
 [jquery]
@@ -301,7 +338,7 @@ parsed_name: jquery
 default_uri: /jquery/index
 scraper_name: jquery_core
 zip_url:  
-sort: 31
+sort: 35
 additional: false
 active: true
 [jqueryui]
@@ -310,7 +347,7 @@ parsed_name: jquery_ui
 default_uri: /jqueryui/color-animation
 scraper_name: jquery_ui
 zip_url:  
-sort: 32
+sort: 36
 additional: false
 active: true
 [jquerymobile]
@@ -319,7 +356,7 @@ parsed_name: jquery_mobile
 default_uri: /jquerymobile/classes
 scraper_name: jquery_mobile
 zip_url:  
-sort: 33
+sort: 37
 additional: false
 active: true
 [knex]
@@ -328,7 +365,7 @@ parsed_name: knex
 default_uri: /knex/index
 scraper_name: knex
 zip_url:  
-sort: 34
+sort: 38
 additional: false
 active: true
 [knockout]
@@ -337,7 +374,7 @@ parsed_name: knockout
 default_uri: /knockout/knockout.js
 scraper_name: knockout
 zip_url:  
-sort: 35
+sort: 39
 additional: false
 active: true
 [less]
@@ -346,7 +383,7 @@ parsed_name: less
 default_uri: /less/misc_functions
 scraper_name: less
 zip_url:  
-sort: 36
+sort: 41
 additional: false
 active: true
 [laravel]
@@ -355,7 +392,7 @@ parsed_name: laravel
 default_uri: /laravel/namespaces
 scraper_name: laravel
 zip_url:  
-sort: 37
+sort: 42
 additional: false
 active: true
 [lodash]
@@ -364,7 +401,7 @@ parsed_name: lodash
 default_uri: /lodash/_
 scraper_name: lodash
 zip_url:  
-sort: 38
+sort: 43
 additional: false
 active: true
 [lua]
@@ -373,7 +410,7 @@ parsed_name: lua
 default_uri: /lua/manual
 scraper_name: lua
 zip_url:  
-sort: 39
+sort: 44
 additional: false
 active: true
 [marionette]
@@ -382,7 +419,7 @@ parsed_name: marionette
 default_uri: /marionette/api
 scraper_name: marionette
 zip_url:  
-sort: 41
+sort: 45
 additional: false
 active: true
 [markdown]
@@ -391,7 +428,7 @@ parsed_name: markdown
 default_uri: /markdown/inline_html
 scraper_name: markdown
 zip_url:  
-sort: 42
+sort: 46
 additional: false
 active: true
 [mocha]
@@ -400,7 +437,7 @@ parsed_name: mocha
 default_uri: /mocha/index
 scraper_name: mocha
 zip_url:  
-sort: 43
+sort: 47
 additional: false
 active: true
 [modernizr]
@@ -409,7 +446,7 @@ parsed_name: modernizr
 default_uri: /modernizr/index
 scraper_name: modernizr
 zip_url:  
-sort: 44
+sort: 48
 additional: false
 active: true
 [moment]
@@ -418,7 +455,7 @@ parsed_name: moment
 default_uri: /moment/index
 scraper_name: moment
 zip_url:  
-sort: 45
+sort: 49
 additional: false
 active: true
 [mysql]
@@ -427,7 +464,7 @@ parsed_name: mysql
 default_uri: /mysql/index
 scraper_name: mysql
 zip_url:  
-sort: 46
+sort: 51
 additional: false
 active: true
 [mongoosejs]
@@ -436,7 +473,7 @@ parsed_name: mongoosejs
 default_uri: /mongoosejs/index
 scraper_name: mongoose
 zip_url:  
-sort: 47
+sort: 52
 additional: false
 active: true
 [nginx]
@@ -445,7 +482,7 @@ parsed_name: nginx
 default_uri: /nginx/guide/beginner’s_guide
 scraper_name: nginx
 zip_url:  
-sort: 48
+sort: 53
 additional: false
 active: true
 [node]
@@ -454,7 +491,16 @@ parsed_name: node
 default_uri: /nodejs/assert
 scraper_name: node
 zip_url:  
-sort: 49
+sort: 54
+additional: false
+active: true
+[node_lts]
+name: NodeJS LTS
+parsed_name: node_lts
+default_uri: /nodejs_lts/assert
+scraper_name: node_lts
+zip_url:  
+sort: 55
 additional: false
 active: true
 [nokogiri]
@@ -463,7 +509,7 @@ name: Nokogiri
 default_uri: /nokogiri/top_level_namespace
 scraper_name: nokogiri2
 zip_url:  
-sort: 51
+sort: 56
 additional: false
 active: true
 [npm]
@@ -472,7 +518,7 @@ parsed_name: npm
 default_uri: /npm/faq
 scraper_name: npm
 zip_url:  
-sort: 52
+sort: 57
 additional: false
 active: true
 [opentsdb]
@@ -481,7 +527,7 @@ parsed_name: opentsdb
 default_uri: /opentsdb/index
 scraper_name: opentsdb
 zip_url:  
-sort: 53
+sort: 58
 additional: false
 active: true
 [perl]
@@ -490,7 +536,7 @@ parsed_name: perl
 default_uri: /perl/index
 scraper_name: perl
 zip_url:  http://perldoc.perl.org/perldoc-html.tar.gz
-sort: 54
+sort: 59
 additional: false
 active: true
 [php]
@@ -499,7 +545,7 @@ parsed_name: php
 default_uri: /php/classes_and_objects
 scraper_name: php2
 zip_url:  
-sort: 55
+sort: 61
 additional: false
 active: true
 [phpunit]
@@ -508,7 +554,7 @@ parsed_name: phpunit
 default_uri: /phpunit/phpunit_and_selenium
 scraper_name: phpunit
 zip_url:  
-sort: 56
+sort: 62
 additional: false
 active: true
 [phalcon]
@@ -517,7 +563,7 @@ parsed_name: phalcon
 default_uri: /phalcon/
 scraper_name: phalcon
 zip_url:  
-sort: 57
+sort: 63
 additional: false
 active: true
 [phaser]
@@ -526,7 +572,16 @@ parsed_name: phaser
 default_uri: /phaser/
 scraper_name: phaser
 zip_url:  
-sort: 58
+sort: 64
+additional: false
+active: true
+[phoenix]
+name: Phoenix
+parsed_name: phoenix
+default_uri: /phoenix/
+scraper_name: phoenix
+zip_url:  
+sort: 65
 additional: false
 active: true
 [postgresql]
@@ -535,7 +590,7 @@ parsed_name: postgresql
 default_uri: /postgresql/select
 scraper_name: postgresql
 zip_url:  
-sort: 59
+sort: 66
 additional: false
 active: true
 [python2]
@@ -544,7 +599,7 @@ parsed_name: python2
 default_uri: /python2/keyword
 scraper_name: python2
 zip_url: https://docs.python.org/2.7/archives/python-2.7.8-docs-html.zip
-sort: 60
+sort: 67
 additional: false
 active: true
 [python]
@@ -553,7 +608,7 @@ parsed_name: python3
 default_uri: /python3/abc
 scraper_name: python
 zip_url: https://docs.python.org/3/archives/python-3.5.0-docs-html.zip
-sort: 61
+sort: 68
 additional: false
 active: true
 [q]
@@ -562,7 +617,7 @@ parsed_name: q
 default_uri: /q/index
 scraper_name: q
 zip_url:  
-sort: 62
+sort: 69
 additional: false
 active: true
 [rails]
@@ -571,7 +626,7 @@ parsed_name: rails
 default_uri: /rails/rails
 scraper_name: rails
 zip_url:  
-sort: 63
+sort: 70
 additional: false
 active: true
 [react]
@@ -580,7 +635,7 @@ parsed_name: react
 default_uri: /react/thinking_in_react
 scraper_name: react
 zip_url:  
-sort: 64
+sort: 71
 additional: false
 active: true
 [react_native]
@@ -589,7 +644,7 @@ parsed_name: react_native
 default_uri: /react/
 scraper_name: react_native
 zip_url:  
-sort: 65
+sort: 72
 additional: false
 active: true
 [react_router]
@@ -598,7 +653,7 @@ parsed_name: react_router
 default_uri: /react/
 scraper_name: react_router
 zip_url:  
-sort: 66
+sort: 73
 additional: false
 active: true
 [redis]
@@ -607,7 +662,7 @@ parsed_name: redis
 default_uri: /redis/index
 scraper_name: redis
 zip_url:  
-sort: 67
+sort: 74
 additional: false
 active: true
 [reflux]
@@ -616,7 +671,16 @@ parsed_name: reflux
 default_uri: /reflux/index
 scraper_name: reflux
 zip_url:  
-sort: 68
+sort: 75
+additional: false
+active: true
+[relay]
+name: Relay
+parsed_name: relay
+default_uri: /relay/index
+scraper_name: relay
+zip_url:  
+sort: 76
 additional: false
 active: true
 [requirejs]
@@ -625,7 +689,7 @@ parsed_name: requirejs
 default_uri: /requirejs/commonjs_notes
 scraper_name: requirejs
 zip_url:  
-sort: 69
+sort: 77
 additional: false
 active: true
 [rethinkdb]
@@ -634,7 +698,7 @@ parsed_name: rethinkdb
 default_uri: /rethinkdb/index_list
 scraper_name: rethinkdb
 zip_url:  
-sort: 70
+sort: 78
 additional: false
 active: true
 [ruby]
@@ -643,7 +707,7 @@ parsed_name: ruby
 default_uri: /ruby/class
 scraper_name: ruby
 zip_url:  
-sort: 71
+sort: 79
 additional: false
 active: true
 [rust]
@@ -652,7 +716,7 @@ parsed_name: rust
 default_uri: rust/2.2._hello._world!
 scraper_name: rust
 zip_url:  
-sort: 72
+sort: 80
 additional: false
 active: true
 [sass]
@@ -661,7 +725,7 @@ parsed_name: sass
 default_uri: /sass/list_functions
 scraper_name: sass
 zip_url:  
-sort: 73
+sort: 81
 additional: false
 active: true
 [scala]
@@ -670,7 +734,7 @@ parsed_name: scala
 default_uri: /scala/index
 scraper_name: scala
 zip_url: 
-sort: 74
+sort: 82
 additional: false
 active: true
 [sinon]
@@ -679,7 +743,7 @@ parsed_name: sinonjs
 default_uri: /sinonjs/spiapi
 scraper_name: sinon
 zip_url:  
-sort: 75
+sort: 83
 additional: false
 active: true
 [socketio]
@@ -688,7 +752,7 @@ parsed_name: socketio
 default_uri: /socketio/client_api
 scraper_name: socketio
 zip_url:  
-sort: 76
+sort: 84
 additional: false
 active: true
 [sqlite]
@@ -697,7 +761,7 @@ parsed_name: sqlite
 default_uri: /sqlite/index
 scraper_name: sqlite
 zip_url: https://www.sqlite.org/2015/sqlite-doc-3090100.zip
-sort: 87
+sort: 85
 additional: false
 active: true
 [svg]
@@ -715,7 +779,7 @@ parsed_name: swift
 default_uri: /swift/index
 scraper_name: swift
 zip_url:  
-sort: 77
+sort: 86
 additional: false
 active: true
 [swiftreference]
@@ -724,7 +788,7 @@ parsed_name: swift
 default_uri: /swift/reference/index
 scraper_name: swiftreference
 zip_url:  
-sort: 78
+sort: 87
 additional: true
 active: true
 [symfony]
@@ -733,7 +797,7 @@ parsed_name: symfony
 default_uri: /symfony/component/console/command/listcommand
 scraper_name: symfony
 zip_url:  
-sort: 79
+sort: 88
 additional: false
 active: true
 [twig]
@@ -742,7 +806,7 @@ parsed_name: twig
 default_uri: /twig/doc-index
 scraper_name: twig
 zip_url:  
-sort: 80
+sort: 89
 additional: false
 active: true
 [underscore]
@@ -751,7 +815,7 @@ parsed_name: underscorejs
 default_uri: /underscorejs/all
 scraper_name: underscore
 zip_url:  
-sort: 81
+sort: 90
 additional: false
 active: true
 [vue]
@@ -760,7 +824,16 @@ parsed_name: vue
 default_uri: /vue/getting_started
 scraper_name: vue
 zip_url:  
-sort: 82
+sort: 91
+additional: false
+active: true
+[vagrant]
+name: Vagrant
+parsed_name: vagrant
+default_uri: /vagrant/index
+scraper_name: vagrant
+zip_url:  
+sort: 92
 additional: false
 active: true
 [webpack]
@@ -769,7 +842,7 @@ parsed_name: webpack
 default_uri: /webpack/installation
 scraper_name: webpack
 zip_url:  
-sort: 83
+sort: 93
 additional: false
 active: true
 [xpath]
@@ -778,7 +851,7 @@ parsed_name: xpath
 default_uri: /xpath/index
 scraper_name: xpath
 zip_url:  
-sort: 84
+sort: 60
 additional: false
 active: true
 [yii]
@@ -787,7 +860,7 @@ parsed_name: yii
 default_uri: /yii/quick_start
 scraper_name: yii
 zip_url:  
-sort: 85
+sort: 94
 additional: false
 active: true
 [yii1]
@@ -796,6 +869,6 @@ parsed_name: Yii1
 default_uri: /yii1
 scraper_name: yii1
 zip_url:  
-sort: 86
+sort: 95
 additional: false
 active: true
