disabling broken docsets

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -97,7 +97,7 @@ scraper_name: chai
 zip_url:  
 sort: 11
 additional: false
-active: true
+active: false
 [chef]
 name: Chef
 parsed_name: chef
@@ -520,7 +520,7 @@ scraper_name: npm
 zip_url:  
 sort: 57
 additional: false
-active: true
+active: false
 [opentsdb]
 name: OpenTSDB
 parsed_name: opentsdb
