testing DOM only

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -16,7 +16,7 @@ scraper_name: angular
 zip_url:  
 sort: 1
 additional: false
-active: true
+active: false
 [apache]
 name: Apache
 parsed_name: apache
@@ -25,7 +25,7 @@ scraper_name: apache
 zip_url:  
 sort: 2
 additional: false
-active: true
+active: false
 [aspnet]
 name: ASP.NET
 parsed_name: asp.net
@@ -43,7 +43,7 @@ scraper_name: elixir
 zip_url:  
 sort: 4
 additional: false
-active: true
+active: false
 [backbone]
 name: BackboneJS
 parsed_name: backbonejs
@@ -52,7 +52,7 @@ scraper_name: backbone
 zip_url:  
 sort: 5
 additional: false
-active: true
+active: false
 [bower]
 name: Bower
 parsed_name: bower
@@ -61,7 +61,7 @@ scraper_name: bower
 zip_url:  
 sort: 6
 additional: false
-active: true
+active: false
 [bootstrap]
 name: Bootstrap
 parsed_name: bootstrap
@@ -70,7 +70,7 @@ scraper_name: bootstrap
 zip_url:  
 sort: 7
 additional: false
-active: true
+active: false
 [browserify]
 name: Browserify
 parsed_name: browserify
@@ -79,7 +79,7 @@ scraper_name: browserify
 zip_url:  
 sort: 8
 additional: false
-active: true
+active: false
 [c]
 name: C
 parsed_name: c
@@ -88,7 +88,7 @@ scraper_name: c
 zip_url: http://upload.cppreference.com/mwiki/images/6/6c/html_book_20141118.tar.gz 
 sort: 9
 additional: false
-active: true
+active: false
 [chai]
 name: Chai
 parsed_name: chai
@@ -106,7 +106,7 @@ scraper_name: chef
 zip_url:  
 sort: 12
 additional: false
-active: true
+active: false
 [clojure]
 name: Clojure
 parsed_name: clojure
@@ -115,7 +115,7 @@ scraper_name: clojure
 zip_url:  
 sort: 13
 additional: false
-active: true
+active: false
 [coffeescript]
 name: CoffeeScript
 parsed_name: coffeescript
@@ -124,7 +124,7 @@ scraper_name: coffeescript
 zip_url:  
 sort: 14
 additional: false
-active: true
+active: false
 [cordova]
 name: Apache Cordova
 parsed_name: apache_cordova
@@ -133,7 +133,7 @@ scraper_name: cordova
 zip_url:  
 sort: 15
 additional: false
-active: true
+active: false
 [cpp]
 name: Cpp
 parsed_name: cpp
@@ -142,7 +142,7 @@ scraper_name: cpp
 zip_url:  
 sort: 16
 additional: false
-active: true
+active: false
 [css]
 name: CSS
 parsed_name: css
@@ -151,7 +151,7 @@ scraper_name: css
 zip_url:  
 sort: 0
 additional: false
-active: true
+active: false
 [d3]
 name: D3
 parsed_name: d3
@@ -160,7 +160,7 @@ scraper_name: d3
 zip_url:  
 sort: 17
 additional: false
-active: true
+active: false
 [django]
 name: Django
 parsed_name: django
@@ -169,7 +169,7 @@ scraper_name: django
 zip_url: https://docs.djangoproject.com/m/docs/django-docs-1.8-en.zip 
 sort: 18
 additional: false
-active: true
+active: false
 [dom]
 name: DOM
 parsed_name: dom
@@ -187,7 +187,7 @@ scraper_name: dojo
 zip_url:  
 sort: 19
 additional: false
-active: true
+active: false
 [dom_events]
 name: DOM Events
 parsed_name: dom_events
@@ -196,7 +196,7 @@ scraper_name: dom_events
 zip_url:  
 sort: 20
 additional: false
-active: true
+active: false
 [drupal]
 name: Drupal
 parsed_name: drupal
@@ -205,7 +205,7 @@ scraper_name: drupal
 zip_url:  
 sort: 21
 additional: false
-active: true
+active: false
 [ember]
 name: EmberJS
 parsed_name: emberjs
@@ -214,7 +214,7 @@ scraper_name: ember
 zip_url:  
 sort: 22
 additional: false
-active: true
+active: false
 [express]
 name: Express
 parsed_name: express
@@ -223,7 +223,7 @@ scraper_name: express
 zip_url:  
 sort: 23
 additional: false
-active: true
+active: false
 [flow]
 name: Flow
 parsed_name: flow
@@ -241,7 +241,7 @@ scraper_name: git
 zip_url:  
 sort: 25
 additional: false
-active: true
+active: false
 [go]
 name: Go
 parsed_name: go
@@ -250,7 +250,7 @@ scraper_name: go
 zip_url:  
 sort: 26
 additional: false
-active: true
+active: false
 [grunt]
 name: Grunt
 parsed_name: grunt
@@ -259,7 +259,7 @@ scraper_name: grunt
 zip_url:  
 sort: 27
 additional: false
-active: true
+active: false
 [html]
 name: HTML
 parsed_name: html
@@ -268,7 +268,7 @@ scraper_name: html
 zip_url:  
 sort: 30
 additional: false
-active: true
+active: false
 [http]
 name: Http
 parsed_name: http
@@ -277,7 +277,7 @@ scraper_name: http
 zip_url:  
 sort: 28
 additional: false
-active: true
+active: false
 [haskell]
 name: Haskell
 parsed_name: haskell
@@ -286,7 +286,7 @@ scraper_name: haskell
 zip_url:  
 sort: 29
 additional: false
-active: true
+active: false
 [iojs]
 name: ioJS
 parsed_name: iojs
@@ -295,7 +295,7 @@ scraper_name: iojs
 zip_url:  
 sort: 31
 additional: false
-active: true
+active: false
 [jasmine]
 name: Jasmine
 parsed_name: jasmine
@@ -304,7 +304,7 @@ scraper_name: jasmine
 zip_url:  
 sort: 32
 additional: false
-active: true
+active: false
 [javascript]
 name: JavaScript
 parsed_name: javascript
@@ -313,7 +313,7 @@ scraper_name: javascript
 zip_url:  
 sort: 40
 additional: false
-active: true
+active: false
 [java7se]
 name: Java 7 SE
 parsed_name: java7se
@@ -322,7 +322,7 @@ scraper_name: java7se
 zip_url:  
 sort: 33
 additional: false
-active: true
+active: false
 [jest]
 name: Jest
 parsed_name: jest
@@ -331,7 +331,7 @@ scraper_name: jest
 zip_url:  
 sort: 34
 additional: false
-active: true
+active: false
 [jquery]
 name: JQuery
 parsed_name: jquery
@@ -340,7 +340,7 @@ scraper_name: jquery_core
 zip_url:  
 sort: 35
 additional: false
-active: true
+active: false
 [jqueryui]
 name: JQuery UI
 parsed_name: jquery_ui
@@ -349,7 +349,7 @@ scraper_name: jquery_ui
 zip_url:  
 sort: 36
 additional: false
-active: true
+active: false
 [jquerymobile]
 name: JQuery Mobile
 parsed_name: jquery_mobile
@@ -358,7 +358,7 @@ scraper_name: jquery_mobile
 zip_url:  
 sort: 37
 additional: false
-active: true
+active: false
 [knex]
 name: Knex
 parsed_name: knex
@@ -367,7 +367,7 @@ scraper_name: knex
 zip_url:  
 sort: 38
 additional: false
-active: true
+active: false
 [knockout]
 name: KnockOut
 parsed_name: knockout
@@ -376,7 +376,7 @@ scraper_name: knockout
 zip_url:  
 sort: 39
 additional: false
-active: true
+active: false
 [less]
 name: Less
 parsed_name: less
@@ -385,7 +385,7 @@ scraper_name: less
 zip_url:  
 sort: 41
 additional: false
-active: true
+active: false
 [laravel]
 name: Laravel
 parsed_name: laravel
@@ -394,7 +394,7 @@ scraper_name: laravel
 zip_url:  
 sort: 42
 additional: false
-active: true
+active: false
 [lodash]
 name: Lo-Dash
 parsed_name: lodash
@@ -403,7 +403,7 @@ scraper_name: lodash
 zip_url:  
 sort: 43
 additional: false
-active: true
+active: false
 [lua]
 name: Lua
 parsed_name: lua
@@ -412,7 +412,7 @@ scraper_name: lua
 zip_url:  
 sort: 44
 additional: false
-active: true
+active: false
 [marionette]
 name: Marionette
 parsed_name: marionette
@@ -421,7 +421,7 @@ scraper_name: marionette
 zip_url:  
 sort: 45
 additional: false
-active: true
+active: false
 [markdown]
 name: MarkDown
 parsed_name: markdown
@@ -430,7 +430,7 @@ scraper_name: markdown
 zip_url:  
 sort: 46
 additional: false
-active: true
+active: false
 [mocha]
 name: Mocha
 parsed_name: mocha
@@ -439,7 +439,7 @@ scraper_name: mocha
 zip_url:  
 sort: 47
 additional: false
-active: true
+active: false
 [modernizr]
 name: Modernizr
 parsed_name: modernizr
@@ -448,7 +448,7 @@ scraper_name: modernizr
 zip_url:  
 sort: 48
 additional: false
-active: true
+active: false
 [moment]
 name: Moment
 parsed_name: moment
@@ -457,7 +457,7 @@ scraper_name: moment
 zip_url:  
 sort: 49
 additional: false
-active: true
+active: false
 [mysql]
 name: Mysql
 parsed_name: mysql
@@ -466,7 +466,7 @@ scraper_name: mysql
 zip_url:  
 sort: 51
 additional: false
-active: true
+active: false
 [mongoosejs]
 name: MongooseJS
 parsed_name: mongoosejs
@@ -475,7 +475,7 @@ scraper_name: mongoose
 zip_url:  
 sort: 52
 additional: false
-active: true
+active: false
 [nginx]
 name: Nginx
 parsed_name: nginx
@@ -484,7 +484,7 @@ scraper_name: nginx
 zip_url:  
 sort: 53
 additional: false
-active: true
+active: false
 [node]
 name: NodeJS
 parsed_name: node
@@ -493,7 +493,7 @@ scraper_name: node
 zip_url:  
 sort: 54
 additional: false
-active: true
+active: false
 [node_lts]
 name: NodeJS LTS
 parsed_name: node_lts
@@ -502,7 +502,7 @@ scraper_name: node_lts
 zip_url:  
 sort: 55
 additional: false
-active: true
+active: false
 [nokogiri]
 parsed_name: nokogiri
 name: Nokogiri
@@ -511,7 +511,7 @@ scraper_name: nokogiri2
 zip_url:  
 sort: 56
 additional: false
-active: true
+active: false
 [npm]
 name: npm
 parsed_name: npm
@@ -529,7 +529,7 @@ scraper_name: opentsdb
 zip_url:  
 sort: 58
 additional: false
-active: true
+active: false
 [perl]
 name: Perl
 parsed_name: perl
@@ -538,7 +538,7 @@ scraper_name: perl
 zip_url:  http://perldoc.perl.org/perldoc-html.tar.gz
 sort: 59
 additional: false
-active: true
+active: false
 [php]
 name: PHP
 parsed_name: php
@@ -547,7 +547,7 @@ scraper_name: php2
 zip_url:  
 sort: 61
 additional: false
-active: true
+active: false
 [phpunit]
 name: PHPUnit
 parsed_name: phpunit
@@ -556,7 +556,7 @@ scraper_name: phpunit
 zip_url:  
 sort: 62
 additional: false
-active: true
+active: false
 [phalcon]
 name: Phalcon
 parsed_name: phalcon
@@ -565,7 +565,7 @@ scraper_name: phalcon
 zip_url:  
 sort: 63
 additional: false
-active: true
+active: false
 [phaser]
 name: Phaser
 parsed_name: phaser
@@ -574,7 +574,7 @@ scraper_name: phaser
 zip_url:  
 sort: 64
 additional: false
-active: true
+active: false
 [phoenix]
 name: Phoenix
 parsed_name: phoenix
@@ -583,7 +583,7 @@ scraper_name: phoenix
 zip_url:  
 sort: 65
 additional: false
-active: true
+active: false
 [postgresql]
 name: PostgreSQL
 parsed_name: postgresql
@@ -592,7 +592,7 @@ scraper_name: postgresql
 zip_url:  
 sort: 66
 additional: false
-active: true
+active: false
 [python2]
 name: Python2
 parsed_name: python2
@@ -601,7 +601,7 @@ scraper_name: python2
 zip_url: https://docs.python.org/2.7/archives/python-2.7.8-docs-html.zip
 sort: 67
 additional: false
-active: true
+active: false
 [python]
 name: Python3
 parsed_name: python3
@@ -610,7 +610,7 @@ scraper_name: python
 zip_url: https://docs.python.org/3/archives/python-3.5.0-docs-html.zip
 sort: 68
 additional: false
-active: true
+active: false
 [q]
 name: q
 parsed_name: q
@@ -619,7 +619,7 @@ scraper_name: q
 zip_url:  
 sort: 69
 additional: false
-active: true
+active: false
 [rails]
 name: Rails
 parsed_name: rails
@@ -628,7 +628,7 @@ scraper_name: rails
 zip_url:  
 sort: 70
 additional: false
-active: true
+active: false
 [react]
 name: React
 parsed_name: react
@@ -637,7 +637,7 @@ scraper_name: react
 zip_url:  
 sort: 71
 additional: false
-active: true
+active: false
 [react_native]
 name: React native
 parsed_name: react_native
@@ -646,7 +646,7 @@ scraper_name: react_native
 zip_url:  
 sort: 72
 additional: false
-active: true
+active: false
 [react_router]
 name: React Router
 parsed_name: react_router
@@ -655,7 +655,7 @@ scraper_name: react_router
 zip_url:  
 sort: 73
 additional: false
-active: true
+active: false
 [redis]
 name: Redis
 parsed_name: redis
@@ -664,7 +664,7 @@ scraper_name: redis
 zip_url:  
 sort: 74
 additional: false
-active: true
+active: false
 [reflux]
 name: Reflux
 parsed_name: reflux
@@ -673,7 +673,7 @@ scraper_name: reflux
 zip_url:  
 sort: 75
 additional: false
-active: true
+active: false
 [relay]
 name: Relay
 parsed_name: relay
@@ -682,7 +682,7 @@ scraper_name: relay
 zip_url:  
 sort: 76
 additional: false
-active: true
+active: false
 [requirejs]
 name: RequireJS
 parsed_name: requirejs
@@ -691,7 +691,7 @@ scraper_name: requirejs
 zip_url:  
 sort: 77
 additional: false
-active: true
+active: false
 [rethinkdb]
 name: RethinkDB
 parsed_name: rethinkdb
@@ -700,7 +700,7 @@ scraper_name: rethinkdb
 zip_url:  
 sort: 78
 additional: false
-active: true
+active: false
 [ruby]
 name: Ruby
 parsed_name: ruby
@@ -709,7 +709,7 @@ scraper_name: ruby
 zip_url:  
 sort: 79
 additional: false
-active: true
+active: false
 [rust]
 name: Rust
 parsed_name: rust
@@ -718,7 +718,7 @@ scraper_name: rust
 zip_url:  
 sort: 80
 additional: false
-active: true
+active: false
 [sass]
 name: Sass
 parsed_name: sass
@@ -727,7 +727,7 @@ scraper_name: sass
 zip_url:  
 sort: 81
 additional: false
-active: true
+active: false
 [scala]
 name: Scala
 parsed_name: scala
@@ -736,7 +736,7 @@ scraper_name: scala
 zip_url: 
 sort: 82
 additional: false
-active: true
+active: false
 [sinon]
 name: SinonJS
 parsed_name: sinonjs
@@ -745,7 +745,7 @@ scraper_name: sinon
 zip_url:  
 sort: 83
 additional: false
-active: true
+active: false
 [socketio]
 name: SocketIO
 parsed_name: socketio
@@ -754,7 +754,7 @@ scraper_name: socketio
 zip_url:  
 sort: 84
 additional: false
-active: true
+active: false
 [sqlite]
 name: SQLite
 parsed_name: sqlite
@@ -763,7 +763,7 @@ scraper_name: sqlite
 zip_url: https://www.sqlite.org/2015/sqlite-doc-3090100.zip
 sort: 85
 additional: false
-active: true
+active: false
 [svg]
 name: SVG
 parsed_name: svg
@@ -772,7 +772,7 @@ scraper_name: svg
 zip_url:  
 sort: 50
 additional: false
-active: true
+active: false
 [swift]
 name: Swift
 parsed_name: swift
@@ -781,7 +781,7 @@ scraper_name: swift
 zip_url:  
 sort: 86
 additional: false
-active: true
+active: false
 [swiftreference]
 name: Swift
 parsed_name: swift
@@ -790,7 +790,7 @@ scraper_name: swiftreference
 zip_url:  
 sort: 87
 additional: true
-active: true
+active: false
 [symfony]
 name: Symfony
 parsed_name: symfony
@@ -799,7 +799,7 @@ scraper_name: symfony
 zip_url:  
 sort: 88
 additional: false
-active: true
+active: false
 [twig]
 name: Twig
 parsed_name: twig
@@ -808,7 +808,7 @@ scraper_name: twig
 zip_url:  
 sort: 89
 additional: false
-active: true
+active: false
 [underscore]
 name: UnderscoreJS
 parsed_name: underscorejs
@@ -817,7 +817,7 @@ scraper_name: underscore
 zip_url:  
 sort: 90
 additional: false
-active: true
+active: false
 [vue]
 name: Vue
 parsed_name: vue
@@ -826,7 +826,7 @@ scraper_name: vue
 zip_url:  
 sort: 91
 additional: false
-active: true
+active: false
 [vagrant]
 name: Vagrant
 parsed_name: vagrant
@@ -835,7 +835,7 @@ scraper_name: vagrant
 zip_url:  
 sort: 92
 additional: false
-active: true
+active: false
 [webpack]
 name: Webpack
 parsed_name: webpack
@@ -844,7 +844,7 @@ scraper_name: webpack
 zip_url:  
 sort: 93
 additional: false
-active: true
+active: false
 [xpath]
 name: XPath
 parsed_name: xpath
@@ -853,7 +853,7 @@ scraper_name: xpath
 zip_url:  
 sort: 60
 additional: false
-active: true
+active: false
 [yii]
 name: Yii
 parsed_name: yii
@@ -862,7 +862,7 @@ scraper_name: yii
 zip_url:  
 sort: 94
 additional: false
-active: true
+active: false
 [yii1]
 name: Yii1
 parsed_name: Yii1
@@ -871,4 +871,4 @@ scraper_name: yii1
 zip_url:  
 sort: 95
 additional: false
-active: true
+active: false
